# finetuning-notebooks

./: .gitignore  Gemma3N_(4B)_Conversational.ipynb  Llama3_(8B)_Ollama.ipynb  Meta_Synthetic_Data_Llama3_2_(3B).ipynb  README.md  llama3.2_3b_finetome_ollama.ipynb  llama3.2_3b_mn_water.ipynb  main.py  pyproject.toml  synthetic_data_kit_config.yaml
