[project]
name = "finetuning-notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "timm>=1.0.16",
    "transformers",
    "unsloth>=2025.7.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

[tool.uv.sources]
transformers = { git = "https://github.com/huggingface/transformers.git" }
