[project]
name = "finetuning-notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bitsandbytes>=0.46.1",
    "jupyterlab>=4.4.4",
    "synthetic-data-kit",
    "vllm>=0.9.2",
]

[dependency-groups]
dev = []

[tool.uv.sources]
synthetic-data-kit = { git = "https://github.com/meta-llama/synthetic-data-kit" }
